// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SidebarList should match snapshot 1`] = `
<div>
  <div
    data-testid="GlobalThreadsLink"
  />
  <div
    data-testid="DraftsLink"
  />
  <div
    data-testid="RecapsLink"
  />
  <div
    aria-label="channel sidebar region"
    class="SidebarNavContainer a11y__region"
    data-a11y-disable-nav="false"
    data-a11y-sort-order="7"
    id="sidebar-left"
    role="application"
  >
    <div
      data-testid="UnreadChannelIndicator"
    />
    <div
      data-testid="UnreadChannelIndicator"
    />
    <div>
      <div
        data-rbd-droppable-context-id="0"
        data-rbd-droppable-id="droppable-categories"
        id="sidebar-droppable-categories"
      >
        <div
          data-testid="sidebar-category"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarList should match snapshot 2`] = `
<div
  data-rbd-droppable-context-id="0"
  data-rbd-droppable-id="droppable-categories"
  id="sidebar-droppable-categories"
>
  <div
    data-testid="sidebar-category"
  />
</div>
`;
